CIV-8961 Removed code smell